--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=PruebaHora
+server.port=8083
 
 spring.datasource.url=jdbc:sqlserver://annedecordatabase.database.windows.net:1433;database=AnneDecorDataBase;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30
 spring.datasource.username=AnneDecor
